# model-training

./: .coverage  .flake8  .gitignore  .pylintrc  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: CodeQuality.yml  coverage.yml  infra-test.yml  pipeline.yml  pylint.yml  release.yml
data/: a1_RestaurantReviews_HistoricDump.tsv
pylint_custom_checks/: __init__.py  hardcoded_params.py
reports/metrics/: .gitignore
src/: training_pipe.py
src/data/: data_download.py  preprocess.py
src/modeling/: evaluation.py  train.py
tests/: test_feature_and_data.py  test_model_development.py
